# rust_practice_lab

rust_practice_lab/: Cargo.toml  build.rs
rust_practice_lab/src/: lib.rs  main.rs
