[package]
name = "rust_practice_lab"
version = "0.1.0"
edition = "2021"

[dependencies]
colored = "2"
rayon = "1.10.0"
rand = "0.8.5"
itertools = "0.13.0"


[[bin]]
name = "pointers"
path = "src/bin/pointers.rs"

[[bin]]
name = "polymorphism"
path = "src/bin/polymorphism.rs"

[[bin]]
name = "iterators"
path = "src/bin/iterators.rs"