[package]
name = "rust_practice_lab"
version = "0.1.0"
edition = "2021"

[dependencies]
cxx = "1.0.130"
colored = "2"
rayon = "1.10.0"
rand = "0.8.5"
itertools = "0.13.0"
tokio = { version = "1.0.0", features = ["rt", "rt-multi-thread", "macros"] }


[build-dependencies]
cxx-build = "1.0.130"


[[bin]]
name = "pointers"
path = "src/bin/language_fundamentals/memory_managment/pointers.rs"

[[bin]]
name = "polymorphism"
path = "src/bin/language_fundamentals/traits/traits.rs"

[[bin]]
name = "if_let_constructions"
path = "src/bin/language_fundamentals/control_flow/if_let_constructions.rs"

[[bin]]
name = "iterators"
path = "src/bin/language_fundamentals/iterators.rs"

[[bin]]
name = "multithread"
path = "src/bin/concurrency_and_parallelism/multithread.rs"


[[bin]]
name = "async_await"
path = "src/bin/concurrency_and_parallelism/async_await.rs"

[[bin]]
name = "channels"
path = "src/bin/concurrency_and_parallelism/channels.rs"


[lib]
name = "rust_practice_lab"
path = "src/lib.rs"
crate-type = ["cdylib", "lib", "staticlib"]


[target.'cfg(target_env = "msvc")']
rustflags = ["-C", "target-feature=+crt-static"]